--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,15 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_main2">Main2Activity</string>
 
+    <string-array name="sample_array">
+        <item>辞書</item>
+        <item>翻訳</item>
+    </string-array>
+
+    <string-array name="sample_array2">
+        <item>英語→日本語</item>
+        <item>日本語→英語</item>
+    </string-array>
+    <string name="title_activity_main3">Main3Activity</string>
+
 </resources>
