--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
     </string-array>
     <string name="title_activity_main3">Main3Activity</string>
     <string name="title_activity_main22">Main22Activity</string>
+    <string name="title_activity_main23">Main23Activity</string>
 
 </resources>
